# TerraCraft

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  cgMat4.c  cgMat4.h  cgMath.h  main.c  util.c  util.h
